--- a/pergipergi/src/main/resources/application.properties
+++ b/pergipergi/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pergipergi?AllowPublicKeyRetri
 
 #sesuaikan dengan NAMA dan PASSWORD mysql anda
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=
 
 #optimize query untuk db MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #pembuatan database (create || create drop || validate || update)
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=2020
